--- a/css/modules/game.css
+++ b/css/modules/game.css
@@ -9,8 +9,8 @@ main {
 	left: 0;
 	width: 100vw;
 	height: 100vh;
-	backdrop-filter: blur(100px);
-	-webkit-backdrop-filter: blur(100px);
+	background: var(--tertiary-dark);
+	background: linear-gradient(0deg, var(--primary-gradient-color) 0%, var(--secondary-gradient-color) 100%);
 }
 
 .main__cards {
@@ -49,7 +49,7 @@ main {
 	-webkit-transition: all 0.8s ease-in-out;
 	backface-visibility: hidden;
 	-webkit-backface-visibility: hidden;
-	/*box-shadow: 0 0.3rem 1.3rem -0.2rem var(--primary-dark), 0 0.2rem 0.4rem -0.1rem var(--secondary-dark);*/
+	box-shadow: 0 0.3rem 1.3rem -0.2rem var(--primary-dark), 0 0.2rem 0.4rem -0.1rem var(--secondary-dark);
 }	
 
 .main__front-face {
